[package]
name = "rental-listings"
version = "0.1.0"
authors = ["Nicholas Martinez"]
edition = "2021"

[dependencies]
structopt = "0.3.26"
exitfailure = "0.5.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = "1.0.219"
serde_json = "1.0.140"
serde_derive = "1.0.219"
tokio = { version = "1.44.2", features = ["full"] }
