cargo-features = ["edition2024"]

[package]
name = "rental-listings"
version = "0.1.0"
authors = ["Nicholas Martinez"]
edition = "2024"

[dependencies]
reqwest = { version = "0.12.15", features = ["json", "blocking"] }
config = "0.15.11"
chrono = "0.4.41"
scraper = "0.23.1"
csv = "1.3.1"
serde = "1.0.219"
serde_json = "1.0.140"
regex = "1.11.1"
